# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
.cargo/: config.toml
.do/: spec.yaml
.github/workflows/: general.yml
.sqlx/: query-77340bd831e0a1197d0c3fd780445a9f5045416e9598d1299a88e62b86ea2e3a.json
configuration/: base.yaml  production.yaml
migrations/: 20240601054255_make_status_not_null_in_subscriptions.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  mod.rs  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
